<resources>
    <string name="app_name">StreamPlay</string>
    <string name="title_activity_home">Stream Play</string>

    <string name="button_access">Acessar</string>
    <string name="button_confirm">Confirmar</string>
    <string name="facebook_app_id">776614035878120</string>
    <string name="fb_login_protocol_scheme">fb776614035878120</string>
    <string name="facebook_access">Entrar com Facebook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Procurar</string>
    <string name="action_favorite">Favoritos</string>
    <string name="or">- ou -</string>
    <string name="search_hint">Procurar</string>
    <string name="signin">login</string>
    <string name="signup">Cadastre-se</string>
    <string name="suggestions_videos">Sugestão</string>
    <string name="videoModels">Vídeos</string>
    <string name="articleHomeModels">Artigos</string>
    <string name="no_video_found">Nenhum vídeo encontrado</string>
    <string name="no_article_found">Nenhum Artigo encontrado</string>

    <string name="user_name">Nome Completo</string>
    <string name="user_email">E-mail</string>
    <string name="user_password">Senha</string>
    <string name="user_password_confirmation">Confirmar Senha</string>
</resources>
